# eusmark

./: .gitignore
.github/workflows/: build.yml
.omc/: project-memory.json
.omc/state/: hud-stdin-cache.json  last-tool-error.json
.omc/state/sessions/bc490c38-ada4-4279-9298-c61ae226ef46/: hud-state.json  session-started.json
eus-annotator/: .gitignore  package-lock.json  package.json
eus-annotator/.github/workflows/: build.yml
eus-annotator/src-tauri/: Cargo.toml  check_log.txt  error_log.txt  tauri.conf.json
eus-annotator/src-tauri/capabilities/: default.json
eus-annotator/src-tauri/permissions/: annotator.json  autogenerated.json
eus-annotator/src-tauri/src/: lib.rs
